@@ -41,7 +41,6 @@
                 </div>
             </div>
             <div class="form-actions">
-                <input type="hidden" name="came_from" id="came_from" value="${came_from}" />
                 <input type="hidden" name="form.submitted" value="1" />
                 <button type="submit" class="btn btn-primary">Login</button>
             </div>
